--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
 @font-face {
     font-family: Girlroy;
-    src: url(fonts/Gilroy-Medium.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: Futura;
-    src: url(fonts/Futura-Bold.ttf) format('truetype');
+    src: url(fonts/Gilroy-Medium.ttf) format('opentype');
 }
 
 *{
@@ -43,8 +38,9 @@ nav{
     top: 0;
 }
 
-#nav-logo #name-logo{
-  display: none;
+#nav-logo{
+  margin-left: 2px;
+  margin-top: 3px;
 }
 
 #menu-container{
@@ -52,14 +48,14 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 7.5%;
-    height: 5vw;
-    padding: 1vw 2vw;
-    border-radius: 20vw;
-    top: 1vw;
-    right: 3vw;
-    background-color: #ebf18b;
-    z-index: 100;
+    width: 90px; 
+    height: 60px; 
+    padding: 10px 20px; 
+    border-radius: 30px; 
+    top: 20px; 
+    right: 30px; 
+    background-color: #ebf18b; 
+    z-index: 100; 
 }
 
 .cart{
@@ -67,17 +63,17 @@ nav{
   top: .2vw;
 }
 
-.cart span{
+.cart span {
   position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #fff;
-  width: 1.5vw;
-  height: 1.5vw;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
-  top: -.5vw;
-  right: -1.2vw;
+  top: -5px;
+  right: -12px;
 }
 
 /* ......................................... */
@@ -93,48 +89,55 @@ nav{
   display: flex;
   align-items:flex-end;
   height: 100%;
-  font-size: 7vw;
-  font-weight: bold;
-  margin-left: 2vw;
-  left: 0;
   top: 0vw;
-  background: #fff;
+  left: 0;
+  margin-left: 2vw;
   color: #000;
+  font-size: 7vw;
+  font-weight: 800;
+  background: #fff;
 }
 
 /* PRODUCTS - PAGE 2 */
 #page2{
-    margin-top: 10vw;
-    height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10vw;
+  height: fit-content;
 }
 
 .listProduct{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1.04vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction:row;
+  width: 100%;
+}
+
+.item{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .listProduct .item h2{
-  font-weight: 500;
-  font-size: large;
-}
-
-.listProduct .item .price{
-  font-size: small;
+  font-size: 1.5vw;
+  font-weight: 300;
 }
 
 .listProduct .item button{
   background-color: #353432;
   color: #eee;
-  padding: 0.26vw 0.52vw;
-  border-radius: 1.04vw;
-  margin-top: 0.52vw;
+  padding: 0.3vw 1vw;
+  border-radius: 1vw;
+  margin-top: 0.5vw;
   border: none;
   cursor: pointer;
 }
 
 .listProduct .item img{
-  width: 90%;
+  width: 50%;
 }
 
 /* CART */
@@ -142,12 +145,13 @@ nav{
   position: fixed;
   display: grid;
   grid-template-rows: 4vw 1fr 9vw 5vw;
-  width: 40%; 
+  width: 35%; 
   height: 100vh; 
   top: 0;
   right: -100%; 
   color: #eee;
   background-color: #464646;
+  border-bottom-left-radius: 3vw;
   transition: right 1s ease; 
 }
 
@@ -173,7 +177,7 @@ nav{
 
 .cartTab .listCart .item{
   display: grid;
-  grid-template-columns: 4vw 15vw 13vw 1fr;
+  grid-template-columns: 4vw 12vw 10vw 1fr;
   text-align: center;
   align-items: center;
   padding-left: 3vw;
@@ -193,6 +197,10 @@ nav{
   border-top: #928e8e 1px solid;
 }
 
+.delivery .subTitle{
+  margin-left: 6vw;
+}
+
 .subTotal .delivery,
 .subTotal .total{
   display: flex;
@@ -202,9 +210,6 @@ nav{
 .subTotal .title{
   color: #928e8e;
 }
-
-
-
 
 .cartTab .btn{
   display: flex;
@@ -222,23 +227,12 @@ nav{
   background-color: transparent;
 }
 
-/* .cartTab .btn .checkOut{
-  width: 15vw;
-  height: 4vw;
-  border: #000 3px solid;
-  border-radius: 2vw;
-  background-color: transparent;
-  font-family: 'Futura';
-  font-size: 1.2vw;
-  font-weight: 600;
-} */
-
 .checkOut{
   display: inline-block;
   padding: 15px 32px;
   font-size: 17px;
   font-weight: bold;
-  color: rgb(53, 53, 53);
+  color: #6e6c6c;
   background: transparent;
   border-radius: 50px;
   text-align: center;
@@ -257,7 +251,7 @@ nav{
   left: -100%;
   width: 100%;
   height: 100%;
-  background-color: blanchedalmond;
+  background-color: #ffd4ac;
   transition: left 0.8s ease-in-out;
   z-index: -1;
 }
@@ -292,14 +286,118 @@ nav{
   cursor: pointer;
 }
 
-
-
   /* CART ANIMATION */
   body.showCart .cartTab {
     right: 0;
   }
 
   body.showCart #menu-container{
-    transform: translateY(-13.02vw);
+    transform: translateY(-40vw);
   }
   /* ............................ */
+
+
+/*---- BREAKPOINTS ----*/
+@media(max-width: 1024px){
+    /* CART */
+    .cartTab {
+      grid-template-rows: 7vw 1fr 12vw 6vw;
+      width: 45%; 
+    }
+  
+    .cartTab .listCart .item{
+      grid-template-columns: 4vw 18vw 13vw 1fr;
+    }
+
+}
+
+
+/* 768px */
+@media(max-width: 768px){
+  /* PRODUCTS - PAGE 2 */
+  .listProduct{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4vw;
+  }
+
+  .listProduct .item h2{
+    font-size: 2vw;
+  }
+
+
+  /* CART */
+  .cartTab {
+    grid-template-rows: 7vw 1fr 15vw 8vw;
+    width: 60%; 
+  }
+
+  .cartTab .listCart .item{
+    grid-template-columns: 4vw 30vw 13vw 1fr;
+  }
+
+
+  @media(max-width: 500px){
+    /* PRODUCTS - PAGE 2 */
+    .listProduct{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 6vw;
+    }
+  
+    .listProduct .item h2{
+      font-size: 3vw;
+    }
+
+    .listProduct .item img{
+      width: 70%;
+    }
+  
+  
+    /* CART */
+    .cartTab {
+      grid-template-rows: 7vw 1fr 20vw 12vw;
+      width: 90%; 
+    }
+  
+    .cartTab .listCart .item{
+      grid-template-columns: 10vw 40vw 25vw 1fr;
+    }
+  }
+
+
+  @media(max-width: 390px){
+    /* PRODUCTS - PAGE 2 */
+    .listProduct{
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 10vw;
+    }
+      
+    .listProduct .item h2{
+      font-size: 5vw;
+    }
+          
+    /* CART */
+    .cartTab {
+      grid-template-rows: 10vw 1fr 30vw 15vw;
+      width: 100%; 
+    }
+      
+    .cartTab .listCart .item{
+      grid-template-columns: 10vw 40vw 30vw 1fr;
+    }
+
+    .delivery .subTitle{
+      margin-left: 20vw;
+    }
+  }
+
+
+  @media(max-width: 320px){
+    /* CART */
+    .cartTab {
+      grid-template-rows: 15vw 1fr 45vw 18vw;
+    }
+  }
+}   
